Bug 1776498 - Use popup class with all popups. r=Jamie,handyman, a=RyanVM

Manage their shadow style per-window instead. It is a bit unfortunate, but
alas, seems to work, and we had existing code for various workarounds, so it's
not too gross.

The menulist special-case isn't needed anymore, menulists always have
eTransparencyTransparent nowadays on Windows.

Differential Revision: https://phabricator.services.mozilla.com/D151994