widget/windows/nsWindowDefs.h
@@ -63,8 +63,9 @@ typedef enum { TRI_UNKNOWN = -1, TRI_FALSE = 0, TRI_TRUE = 1 } TriStateBool;
  * External apps and drivers depend on window class names.
  * For example, changing the window classes could break
  * touchpad scrolling or screen readers.
+ *
+ * See bug 1776498.
  */
-const uint32_t kMaxClassNameLength = 40;
 const wchar_t kClassNameHidden[] = L"MozillaHiddenWindowClass";
 const wchar_t kClassNameGeneral[] = L"MozillaWindowClass";
 const wchar_t kClassNameDialog[] = L"MozillaDialogClass";
